<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateTask">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_before"
        app:title="@string/criar_tarefa" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/titulo"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tbToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/data"
        app:layout_constraintEnd_toStartOf="@id/tilHour"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tilTitle"
        app:startIconDrawable="@drawable/ic_alendar_today">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hora"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toEndOf="@id/tilDate"
        app:layout_constraintTop_toTopOf="@id/tilDate"
        app:startIconDrawable="@drawable/ic_baseline_timer_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btCreateTask"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCreateTask"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/criar_tarefa"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart" />

</androidx.constraintlayout.widget.ConstraintLayout>